--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('http://fonts.cdnfonts.com/css/cocogoose');
-
 /* BASE STYLES */
 * {
   margin: 0;
@@ -10,36 +9,28 @@
   text-decoration: none;
   list-style: none;
 }
-
 html {
   scroll-behavior: smooth;
 }
-
 body {
   background: transparent;
   font-family: 'Lato', sans-serif;
 }
-
 .container {
-  width: 88%;
+  width: 80%;
   margin: 0 auto;
 }
-
 .no-scroll {
   overflow: hidden;
 }
-
 nav {
   width: 100%;
 }
-
 /* TOP */
-
 header nav .top {
   background: #3e3e3e;
   height: 2rem;
 }
-
 header nav .top ul {
   display: flex;
   justify-content: flex-end;
@@ -47,58 +38,47 @@ header nav .top ul {
   text-align: center;
   gap: 1rem;
 }
-
 .join a {
   color: #fff;
   font-size: 1.2rem;
   font-weight: 700;
   text-align: center;
 }
-
 .nav-menu li a {
   transition: all 300ms ease-in;
 }
-
 header nav .bottom ul a {
   color: #272a31;
   font-weight: 600;
 }
-
 header nav .top ul li a {
   color: #fff;
   padding-top: 3rem;
   font-size: 0.9rem;
 }
-
 header nav .top ul li {
   padding-top: 0.4rem;
 }
-
 /* BOTTOM */
-
 header nav .bottom {
   background: #fff;
 }
-
 header nav .bottom .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 4rem;
 }
-
 header nav .bottom ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
 }
-
 /* HAMBURGER */
 .hamburger {
   display: none;
 }
-
 .bar {
   display: block;
   width: 25px;
@@ -108,45 +88,34 @@ header nav .bottom ul {
   transition: all 0.3s ease-in-out;
   background-color: #101010;
 }
-
 .nav-menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .nav-menu li a:hover {
   color: #ec5242;
 }
-
 .nav-link {
   font-size: 0.9rem;
   font-weight: 300;
   color: #272a31;
 }
-
 .nav-logo {
   font-size: 1.2rem;
   font-weight: 900;
   color: #272a31;
   opacity: 0.7;
 }
-
 .nav-menu .nav-item:nth-child(6) a {
   color: #ec5242;
 }
-
-.nav-menu .nav-item:nth-child(6) a:hover {
-  color: #272a31;
-}
-
 .campaign {
-  border: 2px solid #ec5242;
+  border: 4px solid #ec5242;
   padding: 0.4rem;
+  color: #ec5242;
 }
-
 /* HEADER ENDS */
-
 /* MAIN STARTS */
 main {
   background: url('images/main_big.png');
@@ -154,30 +123,30 @@ main {
   background-size: cover;
   width: 100%;
 }
-
 .main-page {
   padding-top: 4rem;
 }
-
-.about-page {
+/*.about-page {
+  
+  text-align: center;
   display: grid;
   place-items: center;
   padding-bottom: 4rem;
 }
-
+*/
 .main-page .greet {
   text-align: center;
   color: #ec5242;
   font-size: 1.7rem;
   margin-bottom: 0.5rem;
+  text-align: start;
 }
-
 .main-page h1 {
   text-transform: uppercase;
-  text-align: center;
+  text-align: start;
   padding: 0;
   color: #ec5242;
-  font-size: 2rem;
+  font-size: 4rem;
   font-weight: 500;
   margin-bottom: 2rem;
   font-family: 'Cocogoose', sans-serif;
@@ -195,8 +164,33 @@ main {
       #f65112,
       #ec5242
     );
-}
 
+  }
+  .about-page h1 {
+    text-transform: uppercase;
+    text-align: center;
+    padding: 0;
+    color: #ec5242;
+    font-size: 4rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    font-family: 'Cocogoose', sans-serif;
+    background-clip: initial;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image:
+      -webkit-linear-gradient(
+        45deg,
+        #f40001,
+        #ec5242,
+        rgb(255, 64, 0),
+        rgb(255, 123, 0),
+        #a00000,
+        #f65112,
+        #ec5242
+      );
+
+}
 .main-page .description {
   color: #272a31;
   font-size: 1.1rem;
@@ -207,19 +201,16 @@ main {
   padding: 1.5rem;
   opacity: 0.8;
 }
-
 .main-page .about-description {
-  background: #fff;
-  border: 2px solid rgba(46, 47, 49, 0.1);
+  background: #f8f6f6;
+  border: 2px solid rgba(171, 175, 183, 0.1);
 }
-
 .main-page time {
   color: #272a31;
   font-size: 2.2rem;
   font-weight: 900;
   opacity: 0.7;
 }
-
 .main-page .location {
   color: #272a31;
   font-size: 1.1rem;
@@ -227,7 +218,6 @@ main {
   padding: 1rem 0 9rem;
   opacity: 0.7;
 }
-
 .main-page .about-location {
   color: #272a31;
   font-size: 0.94rem;
@@ -236,46 +226,38 @@ main {
   text-align: center;
   opacity: 0.7;
 }
-
 .main-page .email {
   color: #272a31;
   font-size: 1rem;
   font-weight: 700;
 }
-
 .main-page .email:hover {
   text-decoration: underline;
 }
-
 /* MAIN ENDS */
-
 /* ABOUT SUB-SECTION STARTS */
 .sub-section {
   background: #fff;
   width: 100%;
 }
-
 .sub-section h2 {
   color: #272a33;
   padding: 2rem 0 1rem;
   text-align: center;
   opacity: 0.8;
 }
-
 .sub-section hr {
   border-bottom: 2px solid #ec5242;
   width: 12%;
   margin: 0 auto;
   margin-bottom: 1rem;
 }
-
 .sub-section .line {
   border-bottom: 2px solid #272a33;
   width: 100%;
   margin-bottom: 1rem;
   opacity: 0.1;
 }
-
 .sub-section p {
   color: #272a31;
   font-size: 1.2rem;
@@ -284,7 +266,6 @@ main {
   text-align: center;
   opacity: 0.8;
 }
-
 .summit-1 {
   background: url('./images/summit-1.jpg');
   background-repeat: no-repeat;
@@ -299,7 +280,6 @@ main {
   align-items: center;
   max-height: 80vh;
 }
-
 .summit-2 {
   background: url('./images/summit-2.jpeg');
   background-repeat: no-repeat;
@@ -314,21 +294,18 @@ main {
   align-items: center;
   max-height: 80vh;
 }
-
 .summit-header {
   color: #fff;
   font-size: 2rem;
   font-weight: 900;
   text-align: center;
 }
-
 .sub-section .summit {
   color: #fff;
   font-size: 1.3rem;
   font-weight: 900;
   text-align: center;
 }
-
 .ilc {
   color: #414246;
   font-weight: 900;
@@ -339,16 +316,13 @@ main {
   padding: 2.5rem 2rem;
   border: 2px solid rgb(224, 223, 223);
 }
-
 /* ABOUT SUB-SECTION ENDS */
-
 /* PARTNER STARTS */
 .partner {
   background-color: #414246;
   width: 100%;
   padding-bottom: 3rem;
 }
-
 .partner h4 {
   color: #fff;
   padding: 2rem 0 1rem;
@@ -356,33 +330,27 @@ main {
   font-size: 2rem;
   font-weight: 400;
 }
-
 .partner hr {
   border-bottom: 2px solid #ec5242;
   width: 12%;
   margin: 0 auto;
   margin-bottom: 1rem;
 }
-
 .logos {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   width: 100%;
 }
-
 .logos img {
   width: 100%;
 }
-
 .sponsor1 {
   font-size: 1.7rem;
   color: #a3a1a1;
   margin-right: 1rem;
 }
-
 /* PARTNER ENDS */
-
 /* PROGRAM STARTS */
 .program {
   background: url('images/cross.svg');
@@ -391,24 +359,20 @@ main {
   width: 100%;
   height: auto;
 }
-
 .program h2 {
   color: #fff;
   text-align: center;
   padding: 3rem 0 1.1rem;
 }
-
 .program hr {
   border-bottom: 2px solid #ec5242;
   width: 15%;
   margin: 0 auto;
   margin-bottom: 2rem;
 }
-
 .program-contents {
   padding-bottom: 2rem;
 }
-
 .program-contents .content {
   display: grid;
   grid-template-columns: 30% 70%;
@@ -418,7 +382,6 @@ main {
   padding: 2rem 2rem 2rem 2rem;
   margin-bottom: 1.5rem;
 }
-
 .program-contents .content p {
   color: #fff;
   font-weight: 700;
@@ -427,7 +390,6 @@ main {
   width: 70%;
   text-align: center;
 }
-
 .program-contents .content .icon-title {
   display: flex;
   gap: 1rem;
@@ -435,17 +397,14 @@ main {
   color: #fff;
   width: 30%;
 }
-
 .program-contents .content .icon-title i {
   font-size: 3rem;
   opacity: 1;
 }
-
 .program-contents .content .icon-title h3 {
   font-size: 1.4rem;
   color: #ec5242;
 }
-
 .join {
   background-color: #ec5242;
   width: 70%;
@@ -453,52 +412,43 @@ main {
   padding: 2rem;
   text-align: center;
 }
-
 /* PROGRAM ENDS */
-
 /* SPEAKERS STARTS */
-
 .speakers h2 {
   color: #272a31;
   text-align: center;
   padding: 3rem 0 1.1rem;
 }
-
 .speakers hr {
   border-bottom: 2px solid #ec5242;
   width: 15%;
   margin: 0 auto;
   margin-bottom: 2rem;
 }
-
 .featured-speakers {
   display: grid;
   grid-template-columns: 1fr;
   width: 100%;
   padding-bottom: 2rem;
 }
-
 .speakers-details {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
   margin-bottom: 1.2rem;
 }
-
 .speakers-details img {
   width: 50%;
   max-width: 15rem;
   height: auto;
   object-fit: contain;
 }
-
 .speakers-details .details h4 {
   color: #272a33;
   font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
 }
-
 .speakers-details .details .title {
   color: #ec5242;
   font-weight: 700;
@@ -506,81 +456,64 @@ main {
   margin-bottom: 0.5rem;
   font-style: italic;
 }
-
 .speakers-details .details hr {
   border-bottom: 2px solid #272a33;
   width: 10%;
   margin: 0 0 1rem 0;
   opacity: 0.3;
 }
-
 .speakers-details .details .position {
   color: #272a33;
   font-size: 0.9rem;
   font-weight: 500;
   line-height: 1.4;
 }
-
 /* SPEAKERS ENDS */
-
 /* FOOTER STARTS */
-
 footer {
   width: 100%;
   background: #fff;
 }
-
 .footer-content {
   padding: 3rem 0;
-  display: flex;
-  justify-content: space-between;
-  gap: 0.8rem;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  gap: 2.5rem;
 }
-
 .footer-content h5 {
   color: #272a33;
   font-weight: 900;
   font-size: 1.1rem;
 }
-
 .footer-content .footer-text {
   color: #272a33;
   font-weight: 900;
   font-size: 0.8rem;
   opacity: 0.8;
 }
-
 /* FOOTER ENDS */
-
 /* MEDIA QUERY STARTS */
-
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 768px) {
   .main-page .description {
     font-size: 1rem;
     font-weight: 700;
   }
-
   .main-page h1 {
     font-size: 2rem;
     font-weight: 700;
   }
-
   .main-page .greet {
     font-size: 1.6rem;
   }
-
   .main-page time {
     font-size: 1.3rem;
     font-weight: 700;
   }
-
   .main-page .location {
     font-size: 0.95rem;
     font-weight: 700;
   }
-
   /* PROGRAM */
-
   .program-contents .content {
     display: flex;
     flex-direction: column;
@@ -590,61 +523,48 @@ footer {
     padding: 1rem;
     margin-bottom: 1.5rem;
   }
-
   .program-contents .content p {
     width: 100%;
     align-self: center;
   }
-
   .program-contents .content .icon-title {
     justify-content: center;
     width: 100%;
     margin: 0 auto;
   }
-
   .ilc {
     width: 80%;
   }
-
   /* SPEAKERS */
-
   .speakers-details {
     flex-direction: column;
   }
-
   .speakers-details img {
     width: 100%;
     height: auto;
     object-fit: cover;
     margin: 0 auto;
   }
-
   .speakers-details .details h4 {
     text-align: center;
   }
-
   .speakers-details .details .title {
     text-align: center;
   }
-
   .about-page hr {
     display: none;
   }
-
   .speakers-details .details hr {
     margin: auto;
   }
-
   .speakers-details .details .position {
     text-align: center;
     margin-top: 1rem;
   }
-
   .show {
     display: none;
   }
 }
-
 @media only screen and (max-width: 767px) {
   header {
     background: url('images/mob-bg.png');
@@ -652,27 +572,21 @@ footer {
     background-repeat: no-repeat;
     width: 100%;
   }
-
   header nav .top {
     display: none;
   }
-
   .nav-logo {
     display: none;
   }
-
   .nav-link {
     font-size: 1.1rem;
   }
-
   .nav-item {
     margin: 1.4rem 0;
   }
-
-  .nav-menu .nav-item:nth-child(6) a {
+  .nav-menu .nav-item:nth-child(7) a {
     display: none;
   }
-
   .nav-menu {
     position: fixed;
     left: -100%;
@@ -686,36 +600,28 @@ footer {
     z-index: 1;
     height: 100vh;
   }
-
   .nav-menu.active {
     left: 0;
   }
-
   .hamburger {
     display: block;
     cursor: pointer;
   }
-
   .about-page hr {
     display: none;
   }
-
   .ilc {
     width: 80%;
   }
-
   .hamburger.active .bar:nth-child(2) {
     opacity: 0;
   }
-
   .hamburger.active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
   }
-
   .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
   }
-
   main {
     background: url('images/mob-bg.png');
     background-repeat: no-repeat;
@@ -723,90 +629,72 @@ footer {
     width: 100%;
     height: auto;
   }
-
   .main-page time {
     font-size: 1.7rem;
     font-weight: 700;
   }
-
   .main-page .location {
     font-size: 1rem;
   }
-
   /* MAIN ENDS */
-
   .summit-1 {
     height: 70vh;
     max-height: 70vh;
   }
-
   .summit-2 {
     height: 70vh;
     max-height: 70vh;
   }
-
   .show {
     display: none;
   }
-
   .sponsor {
     display: none;
   }
-
   footer {
     display: none;
   }
-
   #footer-about {
     display: block;
   }
 }
-
 @media only screen and (min-width: 768px) {
   .about-hide {
     display: none;
   }
-
   header nav .bottom ul a {
-    color: rgb(177, 3, 157);
+    color: rgb(7, 7, 7);
     font-size: 1.1rem;
     font-weight: 700;
     opacity: 0.7;
   }
-
   .about-header {
     width: 60%;
     margin: 0 auto;
     line-height: 1.1;
   }
-
   .about-page hr {
-    border-bottom: 3px solid #dd4332;
+    border-bottom: 3px solid #f2efee;
     width: 3%;
   }
-
   .main-page .description {
     font-size: 1rem;
     width: 80%;
   }
-
   .main-page .about-description {
     font-size: 1.1rem;
     width: 70%;
     margin: 3rem auto;
   }
-
   .program-contents .content .icon-title i {
     font-size: 2.3rem;
   }
-
   .program-contents {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     width: 100%;
     align-content: center;
   }
-
   .program-contents .content {
     display: flex;
     flex-direction: column;
@@ -816,23 +704,19 @@ footer {
     padding: 1rem 0;
     gap: 0;
   }
-
   .program-contents .content:hover {
     border: 1px solid #fff;
     cursor: pointer;
   }
-
   .program-contents .content .icon-title {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-
   .program-contents .content .icon-title h3 {
     margin-bottom: 1rem;
   }
-
   .program-contents .content p {
     font-weight: 700;
     line-height: 1.4;
@@ -840,15 +724,12 @@ footer {
     font-size: 0.82rem;
     padding: 0 0.2rem;
   }
-
   .speakers-details img {
     width: 30%;
   }
-
   .join {
     display: none;
   }
-
   .show {
     text-decoration: underline;
     text-align: center;
@@ -856,11 +737,9 @@ footer {
     padding: 4rem 0 5rem;
     font-weight: 700;
   }
-
   .show:hover {
     cursor: pointer;
   }
-
   #summit {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -868,79 +747,64 @@ footer {
     gap: 1.3rem;
     margin: 3rem 0 6rem;
   }
-
   .summit-1,
   .summit-2 {
     height: 70vh;
     max-height: 70vh;
   }
-
   .partner {
     display: none;
   }
-
   .sponsor {
     display: block;
   }
-
   .logo-home {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
     width: 100%;
   }
-
   footer {
     width: 100%;
     background: #2e2e2e;
   }
-
   .footer-content h5,
   .footer-content .footer-text {
     color: #fff;
   }
-
   .footer-content .footer-text {
     font-weight: 700;
     font-size: 1rem;
     line-height: 1.5;
   }
-
   .footer-content h5 {
     font-weight: 900;
     font-size: 1.4rem;
   }
-
   #footer-home {
     background: #fff;
   }
-
   #footer-home .container {
     padding: 6rem 0;
   }
-
   #footer-home h5,
   #footer-home .footer-text {
     color: #434247;
   }
 }
-
 @media only screen and (min-width: 1000px) {
   .featured-speakers {
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
   }
-
   .speakers-details img {
     width: 25%;
   }
-
   .speakers-details .details .position {
     font-size: 1.1rem;
     font-weight: 700;
     opacity: 0.7;
   }
-
   .program-contents .content p {
     font-size: 1.1rem;
   }
